--- a/amplify.yml
+++ b/amplify.yml
@@ -49,6 +49,29 @@ applications:
         paths:
           - .npm/**/*
       # buildPath: /
+      
+  - appRoot: apps/amplify-nextjs-template
+    frontend:
+      phases:
+        preBuild:
+          commands:
+            - npm ci --cache .npm --prefer-offline
+        build:
+          commands:
+            # move backend app id to an env var
+            # IMPORTANT! this will fail without manually extending the service role to allow reading cfn stack summary (see below)
+            # npx ampx generate outputs --branch master --app-id $MY_AMPLIFY_BACKEND_APP_ID
+            - npx ampx generate outputs --branch main --app-id d311srnceh0bdz
+           
+            - npm run build
+      artifacts:
+        baseDirectory: dist
+        files:
+          - '**/*'
+      cache:
+        paths:
+          - .npm/**/*
+      # buildPath: /    
 # {
 # 	"Version": "2012-10-17",
 # 	"Statement": [
