--- a/amplify.yml
+++ b/amplify.yml
@@ -66,7 +66,7 @@ applications:
            
             - npm run build
       artifacts:
-        baseDirectory: dist
+        baseDirectory: .next
         files:
           - '**/*'
       cache:
