--- a/amplify.yml
+++ b/amplify.yml
@@ -66,13 +66,35 @@ applications:
            
             - npm run build
       artifacts:
+        baseDirectory: packages/nextjs-app/.next
+        files:
+          - '**/*'
+      cache:
+        paths:
+          - .npm/**/*
+      # buildPath: /   
+  appRoot: apps/next-amplified
+    frontend:
+      phases:
+        preBuild:
+          commands:
+            - npm ci --cache .npm --prefer-offline
+        build:
+          commands:
+            # move backend app id to an env var
+            # IMPORTANT! this will fail without manually extending the service role to allow reading cfn stack summary (see below)
+            # npx ampx generate outputs --branch master --app-id $MY_AMPLIFY_BACKEND_APP_ID
+            - npx ampx generate outputs --branch main --app-id d311srnceh0bdz
+           
+            - npm run build
+      artifacts:
         baseDirectory: .next
         files:
           - '**/*'
       cache:
         paths:
           - .npm/**/*
-      # buildPath: /    
+      # buildPath: /  
 # {
 # 	"Version": "2012-10-17",
 # 	"Statement": [
