--- a/amplify.yml
+++ b/amplify.yml
@@ -11,6 +11,7 @@ applications:
           commands:
             # enable incoming webhook on frontend app, add url to env vars for backend app
             # curl -X POST -d {} "$MY_FRONTEND_BUILD_WEBHOOK_URL" -H "Content-Type:application/json"
+            - curl -X POST -d {} "https://webhooks.amplify.us-east-1.amazonaws.com/prod/webhooks?id=89fea4b9-422b-4800-89d7-65a02535b898&token=YkzyyiXgukLfp8JsfbjEt1ma1hchszXJuByWKuh5xN0&operation=startbuild" -H "Content-Type:application/json"
             - curl -X POST -d {} "https://webhooks.amplify.us-east-1.amazonaws.com/prod/webhooks?id=14af5c58-eebe-489f-8266-c1280517b2b7&token=5EXrzUkppmemkzzkKIgm8eS805Y5yVdOPZCW9sh9gQ&operation=startbuild" -H "Content-Type:application/json"
             - curl -X POST -d {} "https://webhooks.amplify.us-east-1.amazonaws.com/prod/webhooks?id=674cfbc8-e791-4b04-963c-19addbde21a5&token=8g5LcaTsNrWEaDXUe5AzIfBMdqyd9rD0YV69VoRltE&operation=startbuild" -H "Content-Type:application/json"
             
@@ -73,7 +74,7 @@ applications:
         paths:
           - .npm/**/*
       # buildPath: /   
-  appRoot: apps/next-amplified
+  - appRoot: apps/next-amplified
     frontend:
       phases:
         preBuild:
@@ -94,7 +95,7 @@ applications:
       cache:
         paths:
           - .npm/**/*
-      # buildPath: /  
+      # buildPath: /   
 # {
 # 	"Version": "2012-10-17",
 # 	"Statement": [
